# ere

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: cargo-test.yml
benches/: ere_benchmark.rs
ere/: Cargo.toml
ere-benchmarks/: Cargo.toml
ere-benchmarks/src/: main.rs
ere-core/: Cargo.toml
ere-core/src/: epsilon_propogation.rs  fixed_offset.rs  lib.rs  nfa_static.rs  one_pass_u8.rs  parse_tree.rs  pike_vm.rs  pike_vm_u8.rs  pure_nfa.rs  pure_nfa_static.rs  simplified_tree.rs  working_nfa.rs  working_u8_dfa.rs  working_u8_nfa.rs
ere-core/src/engines/: dfa_u8.rs  flat_lockstep_nfa.rs  flat_lockstep_nfa_u8.rs  mod.rs
ere-core/src/visualization/: latex_graph.rs  mod.rs
ere-macros/: Cargo.toml
ere-macros/src/: lib.rs
ere/src/: lib.rs
ere/tests/: pure_regex.rs
posixere/: Cargo.toml
posixere-core/: Cargo.toml
posixere-core/src/: lib.rs  parse_tree.rs  pure_nfa_static.rs  simplified_tree.rs
posixere-macros/: Cargo.toml
posixere-macros/src/: lib.rs
posixere/src/: lib.rs
posixere/tests/: pure_regex.rs
src/: lib.rs  parse_tree.rs  pure_nfa.rs
tests/: pure_regex.rs
