[workspace]
members = ["ere-core", "ere-macros"]
resolver = "2"

[package]
name = "ere"
description = "A compile-time alternative for POSIX extended regular expressions."
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["2kai2kai2"]
categories = ["text-processing"]
readme = "README.md"
repository = "https://github.com/2kai2kai2/ere"

[dependencies]
ere-core = { version = "0.2.0", path = "./ere-core" }
ere-macros = { version = "0.2.0", path = "./ere-macros" }
