[package]
name = "ere-benchmarks"
description = "Benchmarking for the `ere` crate."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["2kai2kai2"]
repository = "https://github.com/2kai2kai2/ere"
publish = false

[dependencies]
ere = { version = "0.2.2", path = ".." }
regex = { version = "1.12.2" }
